; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/ppcmmu/extr_gdblib.c_PacketReadHexNumber.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/ppcmmu/extr_gdblib.c_PacketReadHexNumber.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DataInBuffer = common dso_local global i32* null, align 8
@DataInAddr = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PacketReadHexNumber(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %29, %1
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %16

9:                                                ; preds = %5
  %10 = load i32*, i32** @DataInBuffer, align 8
  %11 = load i64, i64* @DataInAddr, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @isxdigit(i32 %13)
  %15 = icmp ne i64 %14, 0
  br label %16

16:                                               ; preds = %9, %5
  %17 = phi i1 [ false, %5 ], [ %15, %9 ]
  br i1 %17, label %18, label %32

18:                                               ; preds = %16
  %19 = load i32, i32* %4, align 4
  %20 = shl i32 %19, 4
  store i32 %20, i32* %4, align 4
  %21 = load i32*, i32** @DataInBuffer, align 8
  %22 = load i64, i64* @DataInAddr, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* @DataInAddr, align 8
  %24 = getelementptr inbounds i32, i32* %21, i64 %22
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @hex2int(i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = or i32 %27, %26
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %18
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %3, align 4
  br label %5

32:                                               ; preds = %16
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i64 @isxdigit(i32) #1

declare dso_local i32 @hex2int(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
